fix: flicker while deleting

--- a/src-web/src/styles/_editor-content.css
+++ b/src-web/src/styles/_editor-content.css
@@ -24,6 +24,10 @@
     @apply mt-0;
   }
 
+  :last-child {
+    @apply mb-0!;
+  }
+
   h1,
   h2,
   h3 {
